fix: responsive layout letter-spacing added on footer

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,6 +4,10 @@
     padding-right: 30px;
   }
 
+  .footer-columns h3 {
+    letter-spacing: 0;
+  }
+
   .section-padding {
     padding: 5% 5% 0 5%;
   }
@@ -34,6 +38,7 @@
 
     li {
       list-style: none;
+      letter-spacing: 0;
       margin-bottom: 8px;
 
       a {
